sns/vpc-subnet-filtering-routing/vpc-subnet-filtering-routing.yaml
Description: This template deploys a VPC with 3 subnets, a SNS EVA VM, two linux servers and the configuration 
    to inspect inter-subnet traffic by editing the default route of the servers.

Parameters:
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation and /16) for this VPC
    Type: String
    Default: 10.192.0.0/16
    
  PublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation and /24) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.0.0/24
  
  FrontendSubnetCIDR:
    Description: Please enter the IP range (CIDR notation and /24) for the frontend subnet in the first Availability Zone
    Type: String
    Default: 10.192.1.0/24
  
  BackendSubnetCIDR:
    Description: Please enter the IP range (CIDR notation and /24) for the backend subnet in the first Availability Zone
    Type: String
    Default: 10.192.2.0/24

  SNSPublicIP:
    Description: SNS EVA private IP address on the public subnet
    Type: String
    Default: 10.192.0.100

  SNSFrontendIP:
    Description: SNS EVA private IP address on the frontend subnet
    Type: String
    Default: 10.192.1.100

  SNSBackendIP:
    Description: SNS EVA private IP address on the backend subnet
    Type: String
    Default: 10.192.2.100

  FrontendIP:
    Description: Frontend server IP
    Type: String
    Default: 10.192.1.10

  BackendIP:
    Description: Backend server IP
    Type: String
    Default: 10.192.2.10

  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.small
    ConstraintDescription: must be a valid EC2 instance type.

  KeyName:
    Description: EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    AllowedPattern: ".+"

Mappings: 
  SNSRegionMap:
    eu-north-1:
      HVM64: ami-08aeef9fe1d74259b
    ap-south-1:
      HVM64: ami-01d8a977291428114
    eu-west-3:
      HVM64: ami-064ec7e70723023b2
    eu-west-2:
      HVM64: ami-0b04e97c833836e5e
    eu-west-1:
      HVM64: ami-07d0a7846d04d3e26
    ap-northeast-2:
      HVM64: ami-049a0e6ecc7f4bc6e
    ap-northeast-1:
      HVM64: ami-066aa94badb8b8090
    sa-east-1:
      HVM64: ami-0b56acf955d5f7081
    ca-central-1:
      HVM64: ami-0597c4f5ae2b6cff9
    ap-southeast-1:
      HVM64: ami-065bc180cfe4d8b82
    ap-southeast-2:
      HVM64: ami-00bcf54263f55bcec
    eu-central-1:
      HVM64: ami-0f744584945a1238a
    us-east-1:
      HVM64: ami-0e18b1dbfa4099c25
    us-east-2:
      HVM64: ami-086ddf202c3b7ad1a
    us-west-1:
      HVM64: ami-090b725d1cd586551
    us-west-2:
      HVM64: ami-0cb1458327db9b0a3
  UbuntuRegionMap:
    eu-north-1:
      HVM64: ami-092cce4a19b438926
    ap-south-1:
      HVM64: ami-0851b76e8b1bce90b
    eu-west-3:
      HVM64: ami-0c6ebbd55ab05f070
    eu-west-2:
      HVM64: ami-0015a39e4b7c0966f
    eu-west-1:
      HVM64: ami-08ca3fed11864d6bb
    ap-northeast-3:
      HVM64: ami-096c4b6e0792d8c16
    ap-northeast-2:
      HVM64: ami-0454bb2fefc7de534
    ap-northeast-1:
      HVM64: ami-088da9557aae42f39
    sa-east-1:
      HVM64: ami-090006f29ecb2d79a
    ca-central-1:
      HVM64: ami-0aee2d0182c9054ac
    ap-southeast-1:
      HVM64: ami-055d15d9cfddf7bd3
    ap-southeast-2:
      HVM64: ami-0b7dcd6e6fd797935
    eu-central-1:
      HVM64: ami-0d527b8c289b4af7f
    us-east-1:
      HVM64: ami-04505e74c0741db8d
    us-east-2:
      HVM64: ami-0fb653ca2d3203ac1
    us-west-1:
      HVM64: ami-01f87c43e618bf8f0
    us-west-2:
      HVM64: ami-0892d3c7ee96c0bf7

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-VPC" ]]

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-IG" ]]

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Subnet

  FrontendSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref FrontendSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Frontend Subnet

  BackendSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref BackendSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Backend Subnet


  PassallSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Pass all sg
      GroupDescription: "Security group with pass all rule"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
      - IpProtocol: udp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
      - IpProtocol: icmp
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0

  IngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} ingress sg
      GroupDescription: "Security group with ingress rule"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0

  PublicAddress:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  AssociateControlPort:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt PublicAddress.AllocationId
      NetworkInterfaceId: !Ref SNSPublicIf

  SNSInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap [SNSRegionMap, !Ref "AWS::Region", HVM64]
      NetworkInterfaces:
      - NetworkInterfaceId: !Ref SNSPublicIf
        DeviceIndex: 0
      - NetworkInterfaceId: !Ref SNSFrontendIf
        DeviceIndex: 1
      - NetworkInterfaceId: !Ref SNSBackendIf
        DeviceIndex: 2
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-SNS" ]]
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: |
          #!/bin/sh

          ID=$(fetch -o - http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null)

          cat << EOSCRIPT | nsrpc admin:${ID}@127.0.0.1
          CONFIG OBJECT HOST new name=frontend_web ip=10.192.1.10
          CONFIG OBJECT HOST new name=backend_db ip=10.192.2.10
          CONFIG OBJECT ACTIVATE
          CONFIG NETWORK INTERFACE RENAME ifname=ethernet0 name=public
          CONFIG NETWORK INTERFACE RENAME ifname=ethernet1 name=frontend
          CONFIG NETWORK INTERFACE RENAME ifname=ethernet2 name=backend
          CONFIG NETWORK INTERFACE ACTIVATE
          CONFIG FILTER RULE INSERT type=filter index=8 state=on action=pass srctarget=any srcif=public dsttarget=Firewall_public dstport=ssh comment="SSH administration"
          CONFIG FILTER RULE INSERT type=filter index=8 state=on action=pass srctarget=any srcif=public dsttarget=Firewall_public natdsttarget=frontend_web dstport=http comment="Web frontend redirect"
          CONFIG FILTER RULE INSERT type=filter index=8 state=on action=pass srctarget=Network_backend,Network_frontend dsttarget=Internet dstport=any comment="Internet access"
          CONFIG FILTER RULE INSERT type=filter index=8 state=on action=pass srctarget=Network_frontend dsttarget=Network_backend dstport=mysql comment="DB access"
          CONFIG FILTER RULE INSERT type=nat index=8 state=on action=nat srctarget=Network_backend,Network_frontend dsttarget=Internet natsrctarget=Firewall_public natsrcport=ephemeral_fw
          CONFIG FILTER ACTIVATE
          CONFIG SLOT ACTIVATE type=filter slot=8
          QUIT
          EOSCRIPT

          echo "user-data executed" > /log/userdata.log


  SNSPublicIf:
    Type: AWS::EC2::NetworkInterface
    Properties: 
      Description: SNS Public ENI
      PrivateIpAddress: !Ref SNSPublicIP
      SourceDestCheck: true
      SubnetId: !Ref PublicSubnet
      GroupSet:
      - !Ref IngressSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-public-eni" ]]

  SNSFrontendIf:
    Type: AWS::EC2::NetworkInterface
    Properties: 
      Description: SNS Frontend ENI
      PrivateIpAddress: !Ref SNSFrontendIP
      SourceDestCheck: false
      SubnetId: !Ref FrontendSubnet
      GroupSet:
      - !Ref PassallSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-frontend-eni" ]]

  SNSBackendIf:
    Type: AWS::EC2::NetworkInterface
    Properties: 
      Description: SNS Backend ENI
      PrivateIpAddress: !Ref SNSBackendIP
      SourceDestCheck: false
      SubnetId: !Ref BackendSubnet
      GroupSet:
      - !Ref PassallSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-backend-eni" ]]

  FrontendInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap [UbuntuRegionMap, !Ref "AWS::Region", HVM64]
      PrivateIpAddress: !Ref FrontendIP
      SubnetId: !Ref FrontendSubnet
      SecurityGroupIds:
      - !Ref PassallSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-WEB" ]]
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: !Sub 
          - |
            #!/bin/sh
            hostnamectl set-hostname web
            while true; do
              ping -w 5 -c 1 -n 8.8.8.8 && break
              sleep 5
            done
            apt update
            apt upgrade 
            apt install -y apache2 php libapache2-mod-php php-mysql
            rm /var/www/html/index.html
            cat > /var/www/html/index.php <<EOPHP
            <?php
            \$conn = new mysqli("${db}", "web", "secret", "webdb");
            if (\$conn->connect_error) { die("Connection failed: " . \$conn->connect_error); }
            \$conn->query("UPDATE test SET value=value+1 WHERE variable='count'");
            if(\$result = \$conn->query("SELECT value FROM test WHERE variable='count'")) {
              \$count = \$result->fetch_row()[0];
            } else {
              \$count = "error";
            }
            ?>
            <html><body><h1>Frontend App</h1><p>Count: <?= \$count ?></p></body></html>
            EOPHP
            echo "network: {config: disabled}" > /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg
            cat > /etc/netplan/50-cloud-init.yaml <<EONETPLAN
            network:
              version: 2
              ethernets:
                eth0:
                  dhcp4: false
                  addresses: [ ${ip}/24 ]
                  gateway4: ${gw}
                  nameservers:
                    addresses: [ 169.254.169.253 ]
            EONETPLAN
            netplan apply
          - ip: !Ref FrontendIP
            gw: !Ref SNSFrontendIP
            db: !Ref BackendIP

  BackendInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap [UbuntuRegionMap, !Ref "AWS::Region", HVM64]
      PrivateIpAddress: !Ref BackendIP
      SubnetId: !Ref BackendSubnet
      SecurityGroupIds:
      - !Ref PassallSecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref "AWS::StackName", "-DB" ]]
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: !Sub 
          - |
            #!/bin/sh
            hostnamectl set-hostname db
            while true; do
              ping -w 5 -c 1 -n 8.8.8.8 && break
              sleep 5
            done
            echo "mysql-server mysql-server/root_password password secret" | debconf-set-selections
            echo "mysql-server mysql-server/root_password_again password secret" | debconf-set-selections
            apt update
            apt upgrade
            apt install -y mysql-server
            sed -i 's/127.0.0.1/0.0.0.0/g' /etc/mysql/mysql.conf.d/mysqld.cnf
            mysql --user=root --password=secret --execute="CREATE USER 'web'@'%' IDENTIFIED BY 'secret';"
            mysql --user=root --password=secret --execute="CREATE DATABASE webdb CHARACTER SET utf8 COLLATE utf8_bin;"
            mysql --user=root --password=secret --execute="GRANT SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER,INDEX on webdb.* TO 'web'@'%';"
            mysql --user=root --password=secret --execute="flush privileges;"
            mysql --user=web --password=secret --database=webdb --execute="CREATE TABLE test(variable VARCHAR(20) NOT NULL, value INT(6) DEFAULT 0);"
            mysql --user=web --password=secret --database=webdb --execute="INSERT INTO test VALUES('count', 0);"
            /etc/init.d/mysql restart
            echo "network: {config: disabled}" > /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg
            cat > /etc/netplan/50-cloud-init.yaml <<EONETPLAN
            network:
              version: 2
              ethernets:
                eth0:
                  dhcp4: false
                  addresses: [ ${ip}/24 ]
                  gateway4: ${gw}
                  nameservers:
                    addresses: [ 169.254.169.253 ]
            EONETPLAN
            netplan apply
          - ip: !Ref BackendIP
            gw: !Ref SNSBackendIP

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  FrontendRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Frontend Routes (AZ2)

  DefaultFrontendRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref FrontendRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NetworkInterfaceId: !Ref SNSFrontendIf

  FrontendSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref FrontendRouteTable
      SubnetId: !Ref FrontendSubnet

  BackendRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Backend Routes (AZ2)

  DefaultBackendRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref BackendRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NetworkInterfaceId: !Ref SNSBackendIf

  BackendSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref BackendRouteTable
      SubnetId: !Ref BackendSubnet

Outputs:
  SNS:
    Description: Public IP of SNS EVA
    Value: !GetAtt SNSInstance.PublicIp
  
  Webamin:
    Description: SNS EVA webadmin url
    Value: !Sub
      - https://${ip}/admin
      - ip: !GetAtt SNSInstance.PublicIp
  
  App:
    Description: Web app url
    Value: !Sub
      - http://${ip}/index.php
      - ip: !GetAtt SNSInstance.PublicIp

  Password:
    Description: Initial password of SNS EVA
    Value: !Ref SNSInstance
